--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             document.querySelector('.right-side h1').classList.add('slide-out-right');
             document.querySelector('.right-side p').classList.add('slide-out-right');
             setTimeout(function() {
-                window.location.href = "index.html";
+                window.location.href = "home.html";
             }, 1000);
         });
     </script>
