--- a/home.html
+++ b/home.html
@@ -222,7 +222,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
                     <div class="col-lg-4 col-md-6 col-12">
                         <div class="menu-thumb">
                             <div class="menu-image-wrap">
-                                <img src="breakfast/cg1.jpg" class="img-fluid menu-image" alt="">
+                                <img src="cg1.jpg" class="img-fluid menu-image" alt="">
 
                                 <span class="menu-tag bg-warning">Breakfast</span>
                             </div>
