--- a/menu.html
+++ b/menu.html
@@ -110,7 +110,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
 
                     <div class="col-lg-4 col-md-6 col-12">
                         <div class="menu-thumb">
-                            <img src="breakfast/td1.jpg" class="img-fluid menu-image" alt="">
+                            <img src="td1.jpg" class="img-fluid menu-image" alt="">
 
                             <div class="menu-info d-flex flex-wrap align-items-center">
                                 <h4 class="mb-0">Sangkaya</h4>
@@ -136,7 +136,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
 
                     <div class="col-lg-4 col-md-6 col-12">
                         <div class="menu-thumb">
-                            <img src="breakfast/td2.jpg" class="img-fluid menu-image" alt="">
+                            <img src="td2.jpg" class="img-fluid menu-image" alt="">
 
                             <div class="menu-info d-flex flex-wrap align-items-center">
                                 <h4 class="mb-0">Thong Yot</h4>
@@ -162,7 +162,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
 
                     <div class="col-lg-4 col-md-6 col-12">
                         <div class="menu-thumb">
-                            <img src="breakfast/td3.jpg" class="img-fluid menu-image" alt="">
+                            <img src="td3.jpg" class="img-fluid menu-image" alt="">
 
                             <div class="menu-info d-flex flex-wrap align-items-center">
                                 <h4 class="mb-0">Sangkaya with Red Bean Filling</h4>
@@ -202,7 +202,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
 
                     <div class="col-lg-6 col-12">
                         <div class="menu-thumb">
-                            <img src="images/golden-yellow-durian-flesh-seasonal-fruit-thai-fruit-concept.jpg"
+                            <img src="golden-yellow-durian-flesh-seasonal-fruit-thai-fruit-concept.jpg"
                                 class="img-fluid menu-image" alt="">
 
                             <div class="menu-info d-flex flex-wrap align-items-center">
@@ -231,7 +231,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
 
                     <div class="col-lg-6 col-12">
                         <div class="menu-thumb">
-                            <img src="images/branch-grapes-background-grape-ingredient.jpg" class="img-fluid menu-image"
+                            <img src="branch-grapes-background-grape-ingredient.jpg" class="img-fluid menu-image"
                                 alt="">
 
                             <div class="menu-info d-flex flex-wrap align-items-center">
@@ -270,7 +270,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
 
                     <div class="col-lg-4 col-md-6 col-12">
                         <div class="menu-thumb">
-                            <img src="images/delicious-pina-colada-cocktail-with-leaves.jpg"
+                            <img src="delicious-pina-colada-cocktail-with-leaves.jpg"
                                 class="img-fluid menu-image" alt="">
 
                             <div class="menu-info d-flex flex-wrap align-items-center">
@@ -297,7 +297,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
 
                     <div class="col-lg-4 col-md-6 col-12">
                         <div class="menu-thumb">
-                            <img src="images/iced-coffee-iced-green-tea.jpg" class="img-fluid menu-image" alt="">
+                            <img src="iced-coffee-iced-green-tea.jpg" class="img-fluid menu-image" alt="">
 
                             <div class="menu-info d-flex flex-wrap align-items-center">
                                 <h4 class="mb-0">Iced Coffee &amp; Iced Green Set</h4>
@@ -325,7 +325,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
 
                     <div class="col-lg-4 col-md-6 col-12">
                         <div class="menu-thumb">
-                            <img src="images/rice-flour-jelly-sweet-coconut-milk.jpg" class="img-fluid menu-image"
+                            <img src="rice-flour-jelly-sweet-coconut-milk.jpg" class="img-fluid menu-image"
                                 alt="">
 
                             <div class="menu-info d-flex flex-wrap align-items-center">
@@ -430,7 +430,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
         <div class="modal-dialog modal-xl modal-dialog-centered">
             <div class="modal-content d-flex flex-row">
                 <!-- Left Side with Image Only -->
-                <div class="modal-left d-flex flex-column justify-content-center text-white p-5" style="background: url('images/pic17.jpg') no-repeat center center; 
+                <div class="modal-left d-flex flex-column justify-content-center text-white p-5" style="background: url('pic17.jpg') no-repeat center center; 
                     background-size: cover; flex: 1; min-height: 600px;">
                     <small class="position-absolute top-0 start-0 m-3 text-white">Siam <br>
                         Restaurant</small>
