--- a/home.html
+++ b/home.html
@@ -438,7 +438,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
                     <div class="col-lg-6 col-md-6 col-12">
                         <div class="news-thumb mb-4">
                             <a href="news2-detail.html">
-                                <img src="images/fried-shrimps-with-garlic(1).jpg" class="img-fluid news-image" alt="">
+                                <img src="fried-shrimps-with-garlic(1).jpg" class="img-fluid news-image" alt="">
                             </a>
 
                             <div class="news-text-info news-text-info-large">
@@ -457,7 +457,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
                     <div class="col-lg-4 col-md-4 col-12">
                         <div class="news-thumb mb-lg-0 mb-lg-4 mb-0">
                             <a href="news3-detail.html">
-                                <img src="images/pic10.jpg" class="img-fluid news-image" alt="">
+                                <img src="pic10.jpg" class="img-fluid news-image" alt="">
                             </a>
 
                             <div class="news-text-info">
@@ -479,7 +479,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
                     <div class="col-lg-4 col-md-4 col-12">
                         <div class="news-thumb mb-lg-0 mb-lg-4 mb-2">
                             <a href="news4-detail.html">
-                                <img src="images/pic11.jpg" class="img-fluid news-image" alt="">
+                                <img src="pic11.jpg" class="img-fluid news-image" alt="">
                             </a>
 
                             <div class="news-text-info">
@@ -498,7 +498,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
                     <div class="col-lg-4 col-md-6 col-12">
                         <div class="news-thumb mb-4">
                             <a href="news5-detail.html">
-                                <img src="images/pic12.jpg" class="img-fluid news-image" alt="">
+                                <img src="pic12.jpg" class="img-fluid news-image" alt="">
                             </a>
 
                             <div class="news-text-info">
@@ -593,7 +593,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
         <div class="modal-dialog modal-xl modal-dialog-centered">
             <div class="modal-content d-flex flex-row">
                 <!-- Left Side with Image Only -->
-                <div class="modal-left d-flex flex-column justify-content-center text-white p-5" style="background: url('images/pic17.jpg') no-repeat center center; 
+                <div class="modal-left d-flex flex-column justify-content-center text-white p-5" style="background: url('pic17.jpg') no-repeat center center; 
                     background-size: cover; flex: 1; min-height: 600px;">
                     <small class="position-absolute top-0 start-0 m-3 text-white">Siam <br>
                         Restaurant</small>
