--- a/news-detail.html
+++ b/news-detail.html
@@ -231,7 +231,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
                     <div class="col-lg-4 col-md-6 col-12">
                         <div class="news-thumb mb-4">
                             <a href="news2-detail.html">
-                                <img src="images/fried-shrimps-with-garlic(1).jpg" class="img-fluid news-image" alt="">
+                                <img src="fried-shrimps-with-garlic(1).jpg" class="img-fluid news-image" alt="">
                             </a>
 
                             <div class="news-text-info">
@@ -250,7 +250,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
                     <div class="col-lg-4 col-md-6 col-12">
                         <div class="news-thumb mb-4">
                             <a href="news3-detail.html">
-                                <img src="images/pic10.jpg" class="img-fluid news-image" alt="">
+                                <img src="pic10.jpg" class="img-fluid news-image" alt="">
                             </a>
 
                             <div class="news-text-info">
@@ -268,7 +268,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
                     <div class="col-lg-4 col-md-6 col-12">
                         <div class="news-thumb mb-4">
                             <a href="news4-detail.html">
-                                <img src="images/pic11.jpg" class="img-fluid news-image" alt="">
+                                <img src="pic11.jpg" class="img-fluid news-image" alt="">
                             </a>
 
                             <div class="news-text-info">
@@ -363,7 +363,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
         <div class="modal-dialog modal-xl modal-dialog-centered">
             <div class="modal-content d-flex flex-row">
                 <!-- Left Side with Image Only -->
-                <div class="modal-left d-flex flex-column justify-content-center text-white p-5" style="background: url('images/pic17.jpg') no-repeat center center; 
+                <div class="modal-left d-flex flex-column justify-content-center text-white p-5" style="background: url('pic17.jpg') no-repeat center center; 
                     background-size: cover; flex: 1; min-height: 600px;">
                     <small class="position-absolute top-0 start-0 m-3 text-white">Siam <br>
                         Restaurant</small>
