--- a/news4-detail.html
+++ b/news4-detail.html
@@ -94,7 +94,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 col-12">
-                        <img src="images/pic11.jpg" class="img-fluid news-detail-image" alt="fine dining experience">
+                        <img src="pic11.jpg" class="img-fluid news-detail-image" alt="fine dining experience">
 
                         <div class="col-lg-10 col-10 mx-auto mt-5">
                             <h4 class="mb-3">สูตร น่องไก่ทอดหนังกรอบ เทคนิคทอดไก่ให้หนังกรอบ อร่อยได้แบบไม่ผสมแป้ง</h4>
@@ -214,7 +214,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
             <div class="col-lg-4 col-md-6 col-12">
                 <div class="news-thumb mb-4">
                     <a href="news-detail.html">
-                        <img src="images/news/cr1.jpg" class="img-fluid news-image" alt="">
+                        <img src="news/cr1.jpg" class="img-fluid news-image" alt="">
                     </a>
 
                     <div class="news-text-info">
@@ -233,7 +233,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
             <div class="col-lg-4 col-md-6 col-12">
                 <div class="news-thumb mb-4">
                     <a href="news5-detail.html">
-                        <img src="images/pic12.jpg" class="img-fluid news-image" alt="">
+                        <img src="pic12.jpg" class="img-fluid news-image" alt="">
                     </a>
 
                     <div class="news-text-info">
@@ -251,7 +251,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
             <div class="col-lg-4 col-md-6 col-12">
                 <div class="news-thumb mb-4">
                     <a href="news2-detail.html">
-                        <img src="images/fried-shrimps-with-garlic(1).jpg" class="img-fluid news-image" alt="">
+                        <img src="fried-shrimps-with-garlic(1).jpg" class="img-fluid news-image" alt="">
                     </a>
 
                     <div class="news-text-info">
@@ -345,7 +345,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
     <div class="modal-dialog modal-xl modal-dialog-centered">
         <div class="modal-content d-flex flex-row">
             <!-- Left Side with Image Only -->
-            <div class="modal-left d-flex flex-column justify-content-center text-white p-5" style="background: url('images/pic17.jpg') no-repeat center center; 
+            <div class="modal-left d-flex flex-column justify-content-center text-white p-5" style="background: url('pic17.jpg') no-repeat center center; 
                 background-size: cover; flex: 1; min-height: 600px;">
                 <small class="position-absolute top-0 start-0 m-3 text-white">Siam <br>
                     Restaurant</small>
