--- a/news5-detail.html
+++ b/news5-detail.html
@@ -94,7 +94,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 col-12">
-                        <img src="images/pic12.jpg" class="img-fluid news-detail-image" alt="fine dining experience">
+                        <img src="pic12.jpg" class="img-fluid news-detail-image" alt="fine dining experience">
 
                         <div class="col-lg-10 col-10 mx-auto mt-5">
                             <h4 class="mb-3">แจกสูตร ผัดกะเพราหมูสับ สูตรร้านตามสั่ง หอมฟุ้ง อร่อยเด็ดเผ็ดสะใจ</h4>
@@ -225,7 +225,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
             <div class="col-lg-4 col-md-6 col-12">
                 <div class="news-thumb mb-4">
                     <a href="news2-detail.html">
-                        <img src="images/fried-shrimps-with-garlic(1).jpg" class="img-fluid news-image" alt="">
+                        <img src="fried-shrimps-with-garlic(1).jpg" class="img-fluid news-image" alt="">
                     </a>
 
                     <div class="news-text-info">
@@ -244,7 +244,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
             <div class="col-lg-4 col-md-6 col-12">
                 <div class="news-thumb mb-4">
                     <a href="news3-detail.html">
-                        <img src="images/pic10.jpg" class="img-fluid news-image" alt="">
+                        <img src="pic10.jpg" class="img-fluid news-image" alt="">
                     </a>
 
                     <div class="news-text-info">
@@ -261,7 +261,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
             <div class="col-lg-4 col-md-6 col-12">
                 <div class="news-thumb mb-4">
                     <a href="news4-detail.html">
-                        <img src="images/pic11.jpg" class="img-fluid news-image" alt="">
+                        <img src="pic11.jpg" class="img-fluid news-image" alt="">
                     </a>
 
                     <div class="news-text-info">
@@ -354,7 +354,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
         <div class="modal-dialog modal-xl modal-dialog-centered">
             <div class="modal-content d-flex flex-row">
                 <!-- Left Side with Image Only -->
-                <div class="modal-left d-flex flex-column justify-content-center text-white p-5" style="background: url('images/pic17.jpg') no-repeat center center; 
+                <div class="modal-left d-flex flex-column justify-content-center text-white p-5" style="background: url('pic17.jpg') no-repeat center center; 
                     background-size: cover; flex: 1; min-height: 600px;">
                     <small class="position-absolute top-0 start-0 m-3 text-white">Siam <br>
                         Restaurant</small>
