--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <body>
     <div class="popup-intro" id="popupIntro">
         <div class="left-side">
-            <img src="images/pic.jpg" alt="Siam Restaurant Logo">
+            <img src="pic.jpg" alt="Siam Restaurant Logo">
         </div>
         <div class="right-side">
             <h1>Siam <br>
