--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
                     <!-- Section Right: Profile Picture -->
                     <div class="col-lg-4 col-12 order-lg-2 order-1 text-center">
                         <div class="team-thumb">
-                            <img src="images/pic00.jpg" class="img-fluid rounded-circle" alt="Profile Image"
+                            <img src="pic00.jpg" class="img-fluid rounded-circle" alt="Profile Image"
                                 style="max-width: 150px;">
                         </div>
                     </div>
