--- a/about.html
+++ b/about.html
@@ -221,7 +221,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
                         </div>
                     </div>
                     <div class="col-lg-6 col-12 mt-4 mt-lg-0">
-                        <img src="images/pic14.jpg" alt="Newsletter Image" class="img-fluid rounded-circle">
+                        <img src="pic14.jpg" alt="Newsletter Image" class="img-fluid rounded-circle">
                     </div>
                 </div>
             </div>
