--- a/contact.html
+++ b/contact.html
@@ -260,7 +260,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
         <div class="modal-dialog modal-xl modal-dialog-centered">
             <div class="modal-content d-flex flex-row">
                 <!-- Left Side with Image Only -->
-                <div class="modal-left d-flex flex-column justify-content-center text-white p-5" style="background: url('images/pic17.jpg') no-repeat center center; 
+                <div class="modal-left d-flex flex-column justify-content-center text-white p-5" style="background: url('pic17.jpg') no-repeat center center; 
                     background-size: cover; flex: 1; min-height: 600px;">
                     <small class="position-absolute top-0 start-0 m-3 text-white">Siam <br>
                         Restaurant</small>
